language-selector (0.104) UNRELEASED; urgency=low

  * data/pkg_depends:
    List of input methods for traditional Chinese modified. Thanks to
    Ma Xiaojun for the proposal (LP: #1120833).

 -- Gunnar Hjalmarsson <gunnarhj@ubuntu.com>  Sun, 10 Feb 2013 23:11:00 +0100

language-selector (0.103) raring; urgency=low

  * LanguageSelector/LanguageSelector.py:
    Make getMissingLangPacks() return a list instead of a set -
    fixes regression issue from version 0.102 (LP: #1103547).

 -- Gunnar Hjalmarsson <gunnarhj@ubuntu.com>  Fri, 08 Feb 2013 17:12:00 +0100

language-selector (0.102) raring; urgency=low

  [ Martin Pitt ]
  * tests/test_language_support_pkgs.py: Fix unstable test due to Python's
    current hash randomization.
  * Add test case for LP #1103547.

  [ Gunnar Hjalmarsson ]
  * LanguageSelector/LanguageSelector.py:
    Call missing() in language_support_pkgs.py instead of
    by_locale(), so the check for missing language support packages
    is carried out for all the installed languages, not only for the
    current system language.
  * language_support_pkgs.py:
    Hack to prevent that users are prompted to install hunspell-de-xx
    when the enhanced (and conflicting) hunspell-de-xx-frami is
    installed (LP: #1103547).

 -- Martin Pitt <martin.pitt@ubuntu.com>  Fri, 08 Feb 2013 11:55:28 +0100

language-selector (0.101) raring; urgency=low

  * This upload is about fixing LP: #1043031. Namely the use of LANG guards
    introduced in 0.86 was possibly not an entirely correct solution because
    there is a significant class of users who do not use the 'native' locale
    of these fonts, yet this is what a LANG guards tests for. We need the
    fontconfig configurations to apply correctly in these cases too.
  * Remove Japanese fontconfig file; these have been moved to the individual
    font packages which will be pulled in by l-s if appropriate.
  * Switch to using .maintscript file for removing conffiles; version