@@ -3,6 +3,9 @@ language-selector (0.104) UNRELEASED; urgency=low
   * data/pkg_depends:
     List of input methods for traditional Chinese modified. Thanks to
     Ma Xiaojun for the proposal (LP: #1120833).
+  * LanguageSelector/LangCache.py:
+    When a language is removed, don't remove packages that are not
+    language specific (LP: #37707).
 
  -- Gunnar Hjalmarsson <gunnarhj@ubuntu.com>  Sun, 10 Feb 2013 23:11:00 +0100
 
